<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.glowingsoft.Recomendados.Seller.ActivitiesSeller.NameYourShopActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTransparent">


        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/nameyourshop" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@id/reflectTv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/shopPrefMargin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reflectTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/shopPrefMargin"
                    android:paddingLeft="3dp"
                    android:text="@string/reflect"
                    android:textSize="15dp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/shopNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginLinear"
                    android:background="@drawable/spinner_drawable"
                    android:drawableLeft="@drawable/shop"
                    android:drawablePadding="@dimen/marginLinear"
                    android:hint="@string/shopName"
                    android:paddingLeft="@dimen/marginLinear" />

                <TextView
                    android:id="@+id/checkavailabilyTv"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginTopcard"
                    android:background="@drawable/viewshop_view"
                    android:gravity="center"
                    android:text="@string/checkavailability"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginTopcard"
                    android:gravity="start"

                    android:text="@string/nameshopDescr" />

                <TextView
                    android:id="@+id/continueTv"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginTopcard"
                    android:background="@drawable/viewshop_view"
                    android:gravity="center"
                    android:text="@string/saveandcontinue"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
