<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Seller.ActivitiesSeller.SellerSignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/backBtnPadding"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/logoIv"
                android:layout_width="@dimen/logoWelcomeWidth"
                android:layout_height="@dimen/logoWelcomeHeight"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/welcomeLogoTopMargin"
                android:src="@drawable/logosimple" />

            <TextView
                android:id="@+id/buyerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logoIv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginLinear"
                android:padding="@dimen/textPadding"
                android:text="@string/seller"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/welcomeTextSize"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/buyerTv"
                android:layout_margin="@dimen/cardMarginLeft"
                android:layout_marginTop="@dimen/marginLinear"
                android:elevation="@dimen/elevationCard"
                app:cardBackgroundColor="@color/cardBackground"
                app:cardCornerRadius="@dimen/cardRadius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/linearLayouMargin"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/userNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_design"
                        android:drawableLeft="@drawable/usernew"
                        android:drawablePadding="@dimen/drawablePadding"
                        android:hint="@string/user"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/userEmailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginLinear"
                        android:background="@drawable/button_design"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="@dimen/drawablePadding"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/locationEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginLinear"
                        android:background="@drawable/button_design"
                        android:drawableLeft="@drawable/placeholder"
                        android:drawablePadding="@dimen/drawablePadding"
                        android:hint="@string/location"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/phoneNoEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginLinear"
                        android:background="@drawable/button_design"
                        android:drawableLeft="@drawable/phoneicon"
                        android:drawablePadding="@dimen/drawablePadding"
                        android:hint="@string/phoneNo"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginLinear"
                        android:background="@drawable/button_design"
                        android:drawableLeft="@drawable/password"
                        android:drawablePadding="@dimen/drawablePadding"
                        android:hint="@string/password"
                        android:inputType="textPassword" />


                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="@dimen/buttonWidth"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/marginLinear"
                        android:background="@drawable/login_design"
                        android:gravity="center"
                        android:text="@string/signUpTv"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/signUpTv"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/marginLinear"
                        android:gravity="center"
                        android:padding="@dimen/textPadding"
                        android:text="@string/alreadyAccount"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
